2010-04-16  Karel Klíč  <kklic@redhat.com>

	* po/POTFILES.in: New file; start with one testing file.

	* po/LINGUAS: New file; start with Czech localization only.

	* po/Makevars: New file with gettext configuration.

	* README: New section Git Repository.

	* src/libwikt/languages.h: Prefer term ASCII/UTF-8 "encoding" 
	over "format".
	Make languages structure available for applications.
	Delete trailing whitespace.
	Delete emacs custom settings.